# ezgit

./: .clang-format  .gitignore  CMakeLists.txt
src/: main.cc
src/config/: Config.cc  Config.h
src/git_wrapper/: Commit.cc  Commit.h  File.cc  File.h  Remote.cc  Remote.h  Repository.h  repository.cc  repository.hh
src/ui/: AllCommits.cc  AllCommits.h  AllCommits.ui  ChangedFile.cc  ChangedFile.h  CloneDialog.cc  CloneDialog.h  CloneDialog.ui  Commit.cc  Commit.h  Commit.ui  CustomCommit.cc  CustomCommit.h  MainWindow.cc  MainWindow.h  MainWindow.ui  RepoViewerWidget.cc  RepoViewerWidget.h  RepoViewerWidget.ui  YourChanges.cc  YourChanges.h
